@@ -4,6 +4,7 @@ ver 0.22.10 (not yet released)
 * database
   - simple: fix crash bug
   - simple: fix absolute paths in CUE "as_directory" entries
+  - simple: prune CUE entries from database for non-existent songs
 * input
   - curl: fix crash bug after stream with Icy metadata was closed by peer
   - tidal: remove defunct unmaintained plugin
